edit all changes with deleting
